call_chain/tests/snapshots/base__call_chain_argument_active_param_not_last.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
[
    ArgumentList {
        prev: [
            ClassOrVariable {
                name: "a",
                range: AstRange {
                    start: AstPoint {
                        line: 5,
                        col: 8,
                    },
                    end: AstPoint {
                        line: 5,
                        col: 9,
                    },
                },
            },
            MethodCall {
                name: "concat",
                range: AstRange {
                    start: AstPoint {
                        line: 5,
                        col: 10,
                    },
                    end: AstPoint {
                        line: 5,
                        col: 16,
                    },
                },
            },
        ],
        active_param: Some(
            0,
        ),
        filled_params: [
            [
                ClassOrVariable {
                    name: "b",
                    range: AstRange {
                        start: AstPoint {
                            line: 5,
                            col: 17,
                        },
                        end: AstPoint {
                            line: 5,
                            col: 18,
                        },
                    },
                },
            ],
            [
                ClassOrVariable {
                    name: "c",
                    range: AstRange {
                        start: AstPoint {
                            line: 5,
                            col: 21,
                        },
                        end: AstPoint {
                            line: 5,
                            col: 22,
                        },
                    },
                },
            ],
        ],
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 16,
            },
            end: AstPoint {
                line: 5,
                col: 23,
            },
        },
    },
    ClassOrVariable {
        name: "b",
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 17,
            },
            end: AstPoint {
                line: 5,
                col: 18,
            },
        },
    },
]
