call_chain/tests/snapshots/base__call_chain_argument_var_base.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
[
    ArgumentList {
        prev: [
            ClassOrVariable {
                name: "local",
                range: AstRange {
                    start: AstPoint {
                        line: 5,
                        col: 8,
                    },
                    end: AstPoint {
                        line: 5,
                        col: 13,
                    },
                },
            },
            MethodCall {
                name: "concat",
                range: AstRange {
                    start: AstPoint {
                        line: 5,
                        col: 14,
                    },
                    end: AstPoint {
                        line: 5,
                        col: 20,
                    },
                },
            },
        ],
        active_param: Some(
            0,
        ),
        filled_params: [
            [
                ClassOrVariable {
                    name: "local",
                    range: AstRange {
                        start: AstPoint {
                            line: 5,
                            col: 21,
                        },
                        end: AstPoint {
                            line: 5,
                            col: 26,
                        },
                    },
                },
            ],
        ],
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 20,
            },
            end: AstPoint {
                line: 5,
                col: 29,
            },
        },
    },
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 21,
            },
            end: AstPoint {
                line: 5,
                col: 26,
            },
        },
    },
]
