call_chain/tests/snapshots/base__call_chain_base.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint {
                line: 8,
                col: 17,
            },
            end: AstPoint {
                line: 8,
                col: 22,
            },
        },
    },
]
