call_chain/tests/snapshots/base__call_chain_field_base.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 17,
            },
            end: AstPoint {
                line: 5,
                col: 22,
            },
        },
    },
    FieldAccess {
        name: "a",
        range: AstRange {
            start: AstPoint {
                line: 5,
                col: 23,
            },
            end: AstPoint {
                line: 5,
                col: 24,
            },
        },
    },
]
