call_chain/tests/snapshots/base__call_chain_if_condition.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
Some(
    [
        ClassOrVariable {
            name: "a",
            range: AstRange {
                start: AstPoint {
                    line: 4,
                    col: 12,
                },
                end: AstPoint {
                    line: 4,
                    col: 13,
                },
            },
        },
    ],
)
