call_chain/tests/snapshots/base__call_chain_new_instance_base.snap
---
source: call_chain/tests/base.rs
expression: out
snapshot_kind: text
---
Some(
    [
        Class {
            name: "String",
            range: AstRange {
                start: AstPoint {
                    line: 4,
                    col: 8,
                },
                end: AstPoint {
                    line: 4,
                    col: 20,
                },
            },
        },
    ],
)
